--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -6,12 +6,12 @@
     "cname": ""
   },
   "theme": {
-    "name": "uno"
+    "name": "saga"
   },
   "urls": {
     "site": "https://noroozimn.github.io",
     "hubpress": "https://noroozimn.github.io",
-    "theme": "//noroozimn.github.io/themes/casper",
+    "theme": "//noroozimn.github.io/themes/uno",
     "images": "https://noroozimn.github.io/images"
   },
   "initialisationConfigComponent": {
